Done by Jenkins Job update artifact:v1

--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: kashf-gateway
-        image:navedamanat/kashf-gateway:latest
+        image:navedamanat/kashf-gateway:v1
 
         imagePullPolicy: IfNotPresent
         ports:
